--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t elstevenmedina/docker-graphql:0.0.2 .
+        docker build -t elstevenmedina/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push elstevenmedina/docker-graphql:0.0.2
+        docker push elstevenmedina/docker-graphql:latest
 
   
     
