--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,20 +31,22 @@ jobs:
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION"
     
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t elstevenmedina/docker-graphql:0.0.2 .
-    #     docker build -t elstevenmedina/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t elstevenmedina/docker-graphql:$NEW_VERSION .
+        docker build -t elstevenmedina/docker-graphql:latest .
 
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push elstevenmedina/docker-graphql:0.0.2
-    #     docker push elstevenmedina/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push elstevenmedina/docker-graphql:$NEW_VERSION
+        docker push elstevenmedina/docker-graphql:latest
 
   
     
